--- a/espresso.yaml
+++ b/espresso.yaml
@@ -39,6 +39,9 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   min_auth_mode: WPA2
+  ap:
+    ssid: "ESPresso Fallback Hotspot"
+    password: !secret wifi_ap_password
   
 
 captive_portal:
@@ -216,7 +219,6 @@ script:
                     rtttl.is_playing
             - rtttl.play:
                 rtttl: !lambda 'return id(rtttl_tune);'
-            #- rtttl.play: 'scale_up:d=32,o=5,b=100:c,c#,d#,e,f#,g#,a#,b'
   - id: stop_tune
     then:
       - globals.set:
@@ -233,9 +235,11 @@ script:
             tune_name = id(tune_selector).at(rand() % sz + 1).value();
           }
           <% for tune in tunes %>
-          if (tune_name == "${tune.name}") {
-            id(rtttl_tune) = "${tune.rtttl}";
-          }
+          <% if loop.first %>
+          if (tune_name == "${tune.name}") id(rtttl_tune) = "${tune.rtttl}";
+          <% else %>
+          else if (tune_name == "${tune.name}") id(rtttl_tune) = "${tune.rtttl}";
+          <% endif %>
           <% endfor %>
 
 
