--- a/espresso.yaml
+++ b/espresso.yaml
@@ -39,6 +39,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   min_auth_mode: WPA2
+  fast_connect: on
   ap:
     ssid: "ESPresso Fallback Hotspot"
     password: !secret wifi_ap_password
